--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 			<div class="col-12 col-sm-4">
 				<h4 class="mg-md text-sm-left text-center">
 					其他信息
-				</h4><a href="https://wiki.archlinux.org" class="a-btn a-block footer-link" target="_blank">Arch Wiki</a><a href="index.html" class="a-btn a-block footer-link">Arch Linux 维基百科</a>
+				</h4><a href="https://wiki.archlinux.org/title/Main_page_(简体中文)" class="a-btn a-block footer-link" target="_blank">ArchWiki</a><a href="https://zh.wikipedia.org/wiki/Arch_Linux" class="a-btn a-block footer-link" target="_blank">ArchLinux 维基百科</a>
 			</div>
 			<div class="col-12 col-sm-4">
 				<h4 class="mg-md text-sm-left text-center">
