Edit GitHub Pages

--- a/404.html
+++ b/404.html
@@ -3,7 +3,8 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ArchLinux安装前必读 - ArchLinux教程</title>
+        <title>Page not found - ArchLinux教程</title>
+        <base href="/">
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -134,35 +135,19 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="从0开始安装archlinux"><a class="header" href="#从0开始安装archlinux">从0开始安装ArchLinux</a></h1>
-<p>请关注我的B站和YouTube</p>
-<p><a href="https://space.bilibili.com/151336873">B站</a></p>
-<p><a href="https://www.youtube.com/channel/UC7lDfWG9hE332i1zjSzzLxA">YouTube</a></p>
-<blockquote>
-<p><strong>注意</strong></p>
-<ul>
-<li>如果你用的是Manjaro，请参考<a href="https://wiki.manjaro.org">ManjaroWiki</a>进行配置！</li>
-<li>Manjaro按照该文档进行操作，可能会产生致命的问题，该问题与文档作者无关！</li>
-<li>如果想要查看其他配置，请参考<a href="https://wiki.archlinux.org">ArchWiki链接</a></li>
-</ul>
-</blockquote>
+                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
+<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="next" href="ArchLinux_Installation.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
                         <div style="clear: both"></div>
                     </nav>
                 </div>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="next" href="ArchLinux_Installation.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
