--- a/ArchLinux_Beautify.html
+++ b/ArchLinux_Beautify.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ArchLinux安装前必读 - ArchLinux教程</title>
+        <title>ArchLinux桌面美化 - ArchLinux教程</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="ReadmeFirst.html"><strong aria-hidden="true">1.</strong> ArchLinux安装前必读</a></li><li class="chapter-item expanded "><a href="ArchLinux_Installation.html"><strong aria-hidden="true">2.</strong> ArchLinux安装</a></li><li class="chapter-item expanded "><a href="ArchLinux_Configuration.html"><strong aria-hidden="true">3.</strong> ArchLinux配置</a></li><li class="chapter-item expanded "><a href="ArchLinux_Beautify.html"><strong aria-hidden="true">4.</strong> ArchLinux桌面美化</a></li><li class="chapter-item expanded "><a href="ArchLinux_Terminal_configuration.html"><strong aria-hidden="true">5.</strong> ArchLinux终端配置</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="ReadmeFirst.html"><strong aria-hidden="true">1.</strong> ArchLinux安装前必读</a></li><li class="chapter-item expanded "><a href="ArchLinux_Installation.html"><strong aria-hidden="true">2.</strong> ArchLinux安装</a></li><li class="chapter-item expanded "><a href="ArchLinux_Configuration.html"><strong aria-hidden="true">3.</strong> ArchLinux配置</a></li><li class="chapter-item expanded "><a href="ArchLinux_Beautify.html" class="active"><strong aria-hidden="true">4.</strong> ArchLinux桌面美化</a></li><li class="chapter-item expanded "><a href="ArchLinux_Terminal_configuration.html"><strong aria-hidden="true">5.</strong> ArchLinux终端配置</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -134,24 +134,72 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="从0开始安装archlinux"><a class="header" href="#从0开始安装archlinux">从0开始安装ArchLinux</a></h1>
-<p>请关注我的B站和YouTube</p>
-<p><a href="https://space.bilibili.com/151336873">B站</a></p>
-<p><a href="https://www.youtube.com/channel/UC7lDfWG9hE332i1zjSzzLxA">YouTube</a></p>
+                        <h1 id="美化效果图"><a class="header" href="#美化效果图">美化效果图</a></h1>
+<p>以Manjaro为例，arch同样适用
+<img src="https://img-blog.csdnimg.cn/20200509175252686.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NTI1MTc4MA==,size_16,color_FFFFFF,t_70#pic_center" alt="在这里插入图片描述" /></p>
+<h1 id="调整面板"><a class="header" href="#调整面板">调整面板</a></h1>
+<p>删除自带面板，新建空面板，从左往右依次是：</p>
 <blockquote>
-<p><strong>注意</strong></p>
-<ul>
-<li>如果你用的是Manjaro，请参考<a href="https://wiki.manjaro.org">ManjaroWiki</a>进行配置！</li>
-<li>Manjaro按照该文档进行操作，可能会产生致命的问题，该问题与文档作者无关！</li>
-<li>如果想要查看其他配置，请参考<a href="https://wiki.archlinux.org">ArchWiki链接</a></li>
-</ul>
+<p>应用程序菜单-&gt;全局菜单-&gt;面板间距-&gt;系统托盘-&gt;数字时钟
+可根据实际情况添加其他部件</p>
 </blockquote>
+<h1 id="安装主题"><a class="header" href="#安装主题">安装主题</a></h1>
+<p>直接下载全局主题，依次点击
+&gt;系统设置-&gt;全局主题-&gt;获取新的主题（如果无法下载，可以分别在Plasma样式、颜色、应用程序风格等自己选择主题进行下载，也可以下载SDDM桌面、欢迎界面、图标和鼠标指针）
+&gt;系统设置-&gt;应用程序风格-&gt;窗口装饰-&gt;标题栏按钮（自己调整窗口标题栏，可以把按键放到左边）
+&gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;糖果-&gt;选择三个特效-&gt;应用
+&gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;外观-&gt;魔灯
+&gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;焦点-&gt;滑出
+&gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;窗口管理-&gt;桌面立方
+&gt;系统设置-&gt;窗口管理-&gt;任务切换器-&gt;把微风改为翻转切换</p>
+<h1 id="安装latte-dock"><a class="header" href="#安装latte-dock">安装Latte-Dock</a></h1>
+<p>关闭背景大小
+绝对大小48
+鼠标悬停放大40%
+删除模拟时钟
+在dock上添加部件
+左侧为应用程序面板
+右侧为回收站</p>
+<pre><code class="language-bash">sudo pacman -S latte-dock
+</code></pre>
+<p>如果右键无反应（此问题常常发生在Manjaro系统上），运行</p>
+<pre><code class="language-bash">sudo pacman -Syyu
+</code></pre>
+<p>此时Latte-Dock可以正常使用</p>
+<h1 id="安装小部件"><a class="header" href="#安装小部件">安装小部件</a></h1>
+<blockquote>
+<p>右键点击桌面空白部分-&gt;点击添加部件-&gt;搜索 Simple System Monitor -&gt; 点击安装</p>
+</blockquote>
+<p>安装后点击配置，Background Color选择Cristal，如果没有交换分区，可以自行关闭
+<img src="https://img-blog.csdnimg.cn/20200509175600576.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NTI1MTc4MA==,size_16,color_FFFFFF,t_70#pic_center" alt="在这里插入图片描述" /></p>
+<h2 id="安装panon可选"><a class="header" href="#安装panon可选">安装panon(可选)</a></h2>
+<p>直接添加部件，下载panon，然后运行命令</p>
+<pre><code class="language-bash">sudo pacman -S qt5-websockets python-docopt python-numpy python-pillow python-pyaudio python-cffi python-websockets
+</code></pre>
+<h1 id="平铺kde可选比较接近i3wm"><a class="header" href="#平铺kde可选比较接近i3wm">平铺KDE（可选，比较接近i3wm）</a></h1>
+<p>2020年9月24日更新</p>
+<h2 id="教程来源"><a class="header" href="#教程来源">教程来源</a></h2>
+<p><a href="https://opensuse.bwsl.wang/opensuse/%E5%B9%B3%E9%93%BAKDE.html">教程来自于以下链接</a>，<a href="https://space.bilibili.com/268630727?from=search&amp;seid=12844584618959748428">点击查看</a>原作者哔哩哔哩主页</p>
+<h2 id="详细教程"><a class="header" href="#详细教程">详细教程</a></h2>
+<pre><code class="language-bash">git clone https://github.com/lingtjien/Grid-Tiling-Kwin.git ~/Grid-Tiling-Kwin
+</code></pre>
+<pre><code class="language-bash">kpackagetool5 --type KWin/Script -i ~/Grid-Tiling-Kwin
+</code></pre>
+<pre><code class="language-bash">mkdir ~/.local/share/kservices5
+</code></pre>
+<pre><code class="language-bash">cp ~/Grid-Tiling-Kwin/metadata.desktop ~/.local/share/kservices5/kwin-script-grid-tiling.desktop
+</code></pre>
+<h2 id="效果图"><a class="header" href="#效果图">效果图</a></h2>
+<p><img src="https://img-blog.csdnimg.cn/20200924193831303.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NTI1MTc4MA==,size_16,color_FFFFFF,t_70#pic_center" alt="在这里插入图片描述" /> </p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="next" href="ArchLinux_Installation.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="prev" href="ArchLinux_Configuration.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
+                            <a rel="next" href="ArchLinux_Terminal_configuration.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -160,7 +208,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="next" href="ArchLinux_Installation.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="prev" href="ArchLinux_Configuration.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
+                    <a rel="next" href="ArchLinux_Terminal_configuration.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
