--- a/ArchLinux_Beautify.html
+++ b/ArchLinux_Beautify.html
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="ReadmeFirst.html"><strong aria-hidden="true">1.</strong> ArchLinux安装前必读</a></li><li class="chapter-item expanded "><a href="ArchLinux_Installation.html"><strong aria-hidden="true">2.</strong> ArchLinux安装</a></li><li class="chapter-item expanded "><a href="ArchLinux_Configuration.html"><strong aria-hidden="true">3.</strong> ArchLinux配置</a></li><li class="chapter-item expanded "><a href="ArchLinux_Beautify.html" class="active"><strong aria-hidden="true">4.</strong> ArchLinux桌面美化</a></li><li class="chapter-item expanded "><a href="ArchLinux_Terminal_configuration.html"><strong aria-hidden="true">5.</strong> ArchLinux终端配置</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="ReadmeFirst.html"><strong aria-hidden="true">1.</strong> ArchLinux安装前必读</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="ArchLinux_Installation.html"><strong aria-hidden="true">1.1.</strong> ArchLinux安装</a></li><li class="chapter-item expanded "><a href="ArchLinux_Configuration.html"><strong aria-hidden="true">1.2.</strong> ArchLinux配置</a></li><li class="chapter-item expanded "><a href="ArchLinux_Beautify.html" class="active"><strong aria-hidden="true">1.3.</strong> ArchLinux桌面美化</a></li><li class="chapter-item expanded "><a href="ArchLinux_Terminal_configuration.html"><strong aria-hidden="true">1.4.</strong> ArchLinux终端配置</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -135,62 +135,126 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="美化效果图"><a class="header" href="#美化效果图">美化效果图</a></h1>
-<p>以Manjaro为例，arch同样适用
-<img src="https://img-blog.csdnimg.cn/20200509175252686.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NTI1MTc4MA==,size_16,color_FFFFFF,t_70#pic_center" alt="在这里插入图片描述" /></p>
+<p>此教程适用于基于ArchLinux的 KDE Plasma桌面的Linux发行版本，例如：<code>Manjaro</code>、<code>EndeavourOS</code>、<code>Garuda Linux</code>、<code>Artix Linux</code>等</p>
+<p><img src="/home/senge-studio/Books/archlinux-installer/src/.picture/Beautify.png" alt="" /></p>
 <h1 id="调整面板"><a class="header" href="#调整面板">调整面板</a></h1>
 <p>删除自带面板，新建空面板，从左往右依次是：</p>
 <blockquote>
-<p>应用程序菜单-&gt;全局菜单-&gt;面板间距-&gt;系统托盘-&gt;数字时钟
-可根据实际情况添加其他部件</p>
+<p>应用程序菜单-&gt;全局菜单-&gt;面板间距-&gt;系统托盘-&gt;数字时钟</p>
+<p>可根据实际情况添加其他部件</p>
 </blockquote>
 <h1 id="安装主题"><a class="header" href="#安装主题">安装主题</a></h1>
 <p>直接下载全局主题，依次点击
 &gt;系统设置-&gt;全局主题-&gt;获取新的主题（如果无法下载，可以分别在Plasma样式、颜色、应用程序风格等自己选择主题进行下载，也可以下载SDDM桌面、欢迎界面、图标和鼠标指针）
+&gt;
 &gt;系统设置-&gt;应用程序风格-&gt;窗口装饰-&gt;标题栏按钮（自己调整窗口标题栏，可以把按键放到左边）
+&gt;
 &gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;糖果-&gt;选择三个特效-&gt;应用
+&gt;
 &gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;外观-&gt;魔灯
+&gt;
 &gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;焦点-&gt;滑出
-&gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;窗口管理-&gt;桌面立方
+&gt;
+&gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;窗口管理-&gt;桌面立方(目前桌面立方可能已被移除)
+&gt;
 &gt;系统设置-&gt;窗口管理-&gt;任务切换器-&gt;把微风改为翻转切换</p>
+<h1 id="设置kvantum主题"><a class="header" href="#设置kvantum主题">设置Kvantum主题</a></h1>
+<p>首先安装<code>sudo pacman -S kvantum</code>，然后手动添加kvantum主题文件夹以完成安装。</p>
 <h1 id="安装latte-dock"><a class="header" href="#安装latte-dock">安装Latte-Dock</a></h1>
-<p>关闭背景大小
-绝对大小48
-鼠标悬停放大40%
-删除模拟时钟
-在dock上添加部件
-左侧为应用程序面板
-右侧为回收站</p>
+<p>关闭背景大小</p>
+<p>绝对大小48(2k屏幕可设置绝对大小为64)</p>
+<p>鼠标悬停放大40%</p>
+<p>删除模拟时钟</p>
+<p>在dock上添加部件</p>
+<p>左侧为应用程序面板</p>
+<p>目前可以添加窗口边缘距离，建议设置为5-10px，类似于deepin v20或macOS BigSur，有一种悬浮的效果</p>
+<p>右侧为回收站</p>
 <pre><code class="language-bash">sudo pacman -S latte-dock
 </code></pre>
-<p>如果右键无反应（此问题常常发生在Manjaro系统上），运行</p>
-<pre><code class="language-bash">sudo pacman -Syyu
-</code></pre>
 <p>此时Latte-Dock可以正常使用</p>
-<h1 id="安装小部件"><a class="header" href="#安装小部件">安装小部件</a></h1>
+<h1 id="安装小部件可选"><a class="header" href="#安装小部件可选">安装小部件(可选)</a></h1>
 <blockquote>
 <p>右键点击桌面空白部分-&gt;点击添加部件-&gt;搜索 Simple System Monitor -&gt; 点击安装</p>
 </blockquote>
 <p>安装后点击配置，Background Color选择Cristal，如果没有交换分区，可以自行关闭
 <img src="https://img-blog.csdnimg.cn/20200509175600576.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NTI1MTc4MA==,size_16,color_FFFFFF,t_70#pic_center" alt="在这里插入图片描述" /></p>
 <h2 id="安装panon可选"><a class="header" href="#安装panon可选">安装panon(可选)</a></h2>
-<p>直接添加部件，下载panon，然后运行命令</p>
-<pre><code class="language-bash">sudo pacman -S qt5-websockets python-docopt python-numpy python-pillow python-pyaudio python-cffi python-websockets
+<p>直接添加并下载小部件panon，然后运行命令</p>
+<pre><code class="language-bash">sudo pacman -S qt5-websockets python-docopt python-numpy python-pillow python-pyaudio python-cffi python-websockets 
 </code></pre>
-<h1 id="平铺kde可选比较接近i3wm"><a class="header" href="#平铺kde可选比较接近i3wm">平铺KDE（可选，比较接近i3wm）</a></h1>
-<p>2020年9月24日更新</p>
-<h2 id="教程来源"><a class="header" href="#教程来源">教程来源</a></h2>
-<p><a href="https://opensuse.bwsl.wang/opensuse/%E5%B9%B3%E9%93%BAKDE.html">教程来自于以下链接</a>，<a href="https://space.bilibili.com/268630727?from=search&amp;seid=12844584618959748428">点击查看</a>原作者哔哩哔哩主页</p>
-<h2 id="详细教程"><a class="header" href="#详细教程">详细教程</a></h2>
-<pre><code class="language-bash">git clone https://github.com/lingtjien/Grid-Tiling-Kwin.git ~/Grid-Tiling-Kwin
+<h1 id="kde使用i3wm窗口管理器"><a class="header" href="#kde使用i3wm窗口管理器">KDE使用i3wm窗口管理器</a></h1>
+<p>2022年5月12日更新</p>
+<h2 id="视频链接"><a class="header" href="#视频链接">视频链接</a></h2>
+<iframe src="//player.bilibili.com/player.html?aid=760058120&bvid=BV1m64y1v7aR&cid=325130544&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<h2 id="安装脚本"><a class="header" href="#安装脚本">安装脚本</a></h2>
+<p><a href="https://gitee.com/senge-studio/archlinux_plasma_i3wm">项目地址(Gitee)</a></p>
+<p><a href="https://github.com/senge-studio/archlinux_plasma_i3wm">项目地址</a></p>
+<ul>
+<li>安装</li>
+</ul>
+<pre><code class="language-bash">sh -c &quot;$(curl -fsSL https://gitee.com/senge-studio/archlinux_plasma_i3wm/raw/master/install.sh)&quot;
 </code></pre>
-<pre><code class="language-bash">kpackagetool5 --type KWin/Script -i ~/Grid-Tiling-Kwin
+<ul>
+<li>卸载</li>
+</ul>
+<pre><code class="language-bash">sh -c &quot;$(curl -fsSL https://gitee.com/senge-studio/archlinux_plasma_i3wm/raw/master/uninstall.sh)&quot;
 </code></pre>
-<pre><code class="language-bash">mkdir ~/.local/share/kservices5
-</code></pre>
-<pre><code class="language-bash">cp ~/Grid-Tiling-Kwin/metadata.desktop ~/.local/share/kservices5/kwin-script-grid-tiling.desktop
-</code></pre>
-<h2 id="效果图"><a class="header" href="#效果图">效果图</a></h2>
-<p><img src="https://img-blog.csdnimg.cn/20200924193831303.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NTI1MTc4MA==,size_16,color_FFFFFF,t_70#pic_center" alt="在这里插入图片描述" /> </p>
+<blockquote>
+<p><strong>注意</strong></p>
+<ul>
+<li>请勿使用root身份执行此脚本，不然会在root目录下安装此配置文件。</li>
+</ul>
+</blockquote>
+<h2 id="疑难解答"><a class="header" href="#疑难解答">疑难解答</a></h2>
+<ul>
+<li>安装完成以后我想修改壁纸怎么办</li>
+</ul>
+<blockquote>
+<ul>
+<li>新建文件夹<code>$HOME/.config/wallpapers</code>，并将壁纸放在该目录下，然后修改壁纸名为<code>i3wallpaper.png</code></li>
+<li>手动修改配置文件第113行，将壁纸的链接粘贴到配置文件</li>
+</ul>
+</blockquote>
+<ul>
+<li>如果我想切换窗口管理器为kwin但是不想删除i3配置怎么办？</li>
+</ul>
+<blockquote>
+<ul>
+<li>新版本的配置文件已经支持一键切换窗口管理器，只需运行<code>i3-switch</code>即可</li>
+</ul>
+</blockquote>
+<ul>
+<li>配置文件有什么bug</li>
+</ul>
+<blockquote>
+<ul>
+<li>在i3模式下，全局菜单、window-buttons无法使用，无法添加小部件</li>
+<li>在i3模式下，所有kwin脚本都会失效（这不算Bug，切换wm为i3的目的是禁用i3wm）</li>
+</ul>
+</blockquote>
+<h2 id="如何使用"><a class="header" href="#如何使用">如何使用</a></h2>
+<ul>
+<li>常用快捷键<code>mod</code>键为<code>Meta</code>键、<code>Super</code>键或<code>Win</code>键，对应macOS的<code>command</code>键。</li>
+</ul>
+<table><thead><tr><th>快捷键</th><th>功能</th></tr></thead><tbody>
+<tr><td><code>mod</code>+<code>shift</code>+<code>q</code></td><td>关闭当前窗口</td></tr>
+<tr><td><code>mod</code>+<code>Return</code></td><td>打开Konsole</td></tr>
+<tr><td><code>mod</code>+<code>d</code></td><td>打开Krunner</td></tr>
+<tr><td><code>mod</code>+<code>f</code></td><td>切换全屏模式</td></tr>
+<tr><td><code>mod</code>+<code>Shift</code>+<code>Space</code></td><td>切换当前窗口为浮动、平铺</td></tr>
+<tr><td><code>mod</code>+<code>num_x</code></td><td>切换虚拟桌面/工作空间</td></tr>
+<tr><td><code>mod</code>+<code>Shift</code>+<code>num_x</code></td><td>将当前窗口移动到桌面/工作空间</td></tr>
+<tr><td><code>mod</code>+<code>Shift</code>+<code>c</code></td><td>重新加载配置文件</td></tr>
+<tr><td><code>mod</code>+<code>Shift</code>+<code>r</code></td><td>重启i3</td></tr>
+<tr><td><code>mod</code>+<code>Shift</code>+<code>e</code></td><td>退出登录</td></tr>
+<tr><td><code>mod</code>+<code>r</code></td><td>进入窗口大小编辑模式</td></tr>
+<tr><td><code>mod</code>+<code>Shift</code>+<code>g</code></td><td>调整窗口间距</td></tr>
+<tr><td><code>Return</code>/<code>Esc</code></td><td>退出编辑/窗口间距模式</td></tr>
+<tr><td><code>mod</code>+<code>letter</code></td><td>打开某个应用（请自行编辑配置文件）</td></tr>
+</tbody></table>
+<ul>
+<li>当你下载以后，请手动编辑<code>$HOME/.config/i3/config</code>文件，然后按照自己的喜好来修改配置文件。</li>
+</ul>
 
                     </main>
 
