--- a/ArchLinux_Installation.html
+++ b/ArchLinux_Installation.html
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="ReadmeFirst.html"><strong aria-hidden="true">1.</strong> ArchLinux安装前必读</a></li><li class="chapter-item expanded "><a href="ArchLinux_Installation.html" class="active"><strong aria-hidden="true">2.</strong> ArchLinux安装</a></li><li class="chapter-item expanded "><a href="ArchLinux_Configuration.html"><strong aria-hidden="true">3.</strong> ArchLinux配置</a></li><li class="chapter-item expanded "><a href="ArchLinux_Beautify.html"><strong aria-hidden="true">4.</strong> ArchLinux桌面美化</a></li><li class="chapter-item expanded "><a href="ArchLinux_Terminal_configuration.html"><strong aria-hidden="true">5.</strong> ArchLinux终端配置</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="ReadmeFirst.html"><strong aria-hidden="true">1.</strong> ArchLinux安装前必读</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="ArchLinux_Installation.html" class="active"><strong aria-hidden="true">1.1.</strong> ArchLinux安装</a></li><li class="chapter-item expanded "><a href="ArchLinux_Configuration.html"><strong aria-hidden="true">1.2.</strong> ArchLinux配置</a></li><li class="chapter-item expanded "><a href="ArchLinux_Beautify.html"><strong aria-hidden="true">1.3.</strong> ArchLinux桌面美化</a></li><li class="chapter-item expanded "><a href="ArchLinux_Terminal_configuration.html"><strong aria-hidden="true">1.4.</strong> ArchLinux终端配置</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -134,35 +134,54 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="archlinux安装教程"><a class="header" href="#archlinux安装教程">ArchLinux安装教程</a></h1>
-<h2 id="准备安装介质"><a class="header" href="#准备安装介质">准备安装介质</a></h2>
-<h3 id="下载arch-linux"><a class="header" href="#下载arch-linux">下载arch linux</a></h3>
-<p>使用清华源下载arch linux
-清华源<a href="https://mirrors.tuna.tsinghua.edu.cn/archlinux/iso/latest/">下载链接</a></p>
-<h3 id="刻录系统镜像"><a class="header" href="#刻录系统镜像">刻录系统镜像</a></h3>
-<h4 id="windowsmacos系统"><a class="header" href="#windowsmacos系统">Windows/macOS系统</a></h4>
-<p>下载balenaEtcher<a href="https://www.balena.io/etcher/">官方下载链接</a>
-Windows也可以使用rufus<a href="http://rufus.ie">下载链接</a>
-不建议使用UltraISO</p>
-<h4 id="linux系统"><a class="header" href="#linux系统">Linux系统</a></h4>
-<p>下载balenaEtcher<a href="https://www.balena.io/etcher/">官方下载链接</a>
-运行<code>lsblk</code>找到你的U盘</p>
-<p>运行<code>dd bs=4m if=/dev/sdx of=/dir/archlinux.iso</code>刻录Linux系统
-注：sdx为你的U盘
-/dir/archlinux.iso为下载路径，必须为绝对路径，如：</p>
+                        <h1 id="安装准备阶段"><a class="header" href="#安装准备阶段">安装准备阶段</a></h1>
+<h2 id="下载arch-linux"><a class="header" href="#下载arch-linux">下载arch linux</a></h2>
+<p>使用清华源下载arch linux</p>
+<p>清华源<a href="https://mirrors.tuna.tsinghua.edu.cn/archlinux/iso/latest/">下载链接</a></p>
+<h2 id="刻录系统镜像"><a class="header" href="#刻录系统镜像">刻录系统镜像</a></h2>
+<h3 id="windowsmacos系统"><a class="header" href="#windowsmacos系统">Windows/macOS系统</a></h3>
+<p>下载balenaEtcher<a href="https://www.balena.io/etcher/">官方下载链接</a></p>
+<p>Windows也可以使用rufus<a href="http://rufus.ie">下载链接</a></p>
+<p>不建议使用UltraISO</p>
+<h3 id="linux系统包含linux衍生版本"><a class="header" href="#linux系统包含linux衍生版本">Linux系统（包含Linux衍生版本）</a></h3>
+<p>下载balenaEtcher<a href="https://www.balena.io/etcher/">官方下载链接</a></p>
+<p>运行<code>lsblk</code>找到你的U盘</p>
+<p>运行<code>dd bs=4m if=/dev/sdx of=/path/archlinux.iso</code>刻录Linux系统</p>
+<p>注：sdx为你的U盘</p>
+<p>/path/archlinux.iso为下载路径，必须为绝对路径，如：</p>
 <pre><code>/home/username/Downloads/archlinux-2020.10.01-x86_64.iso
 </code></pre>
-<p>一定不要使用：</p>
-<pre><code>~/Downloads/archlinux-2020.10.01-x86_64.iso
-</code></pre>
+<p>一定不要使用相对路径：</p>
 <h3 id="使用其他linux发行版本安装"><a class="header" href="#使用其他linux发行版本安装">使用其他Linux发行版本安装</a></h3>
-<p>安装<code>arch-install-scripts</code>，大部分Linux发行版的软件仓库中都有arch安装脚本，可以直接使用<code>pacstrap</code>和<code>arch-chroot</code>命令安装。</p>
-<h2 id="进bios安装arch-linux"><a class="header" href="#进bios安装arch-linux">进Bios安装arch linux</a></h2>
-<h3 id="连接网络"><a class="header" href="#连接网络">连接网络</a></h3>
-<p>如果电脑支持Wi-Fi，可以运行<code>wifi-menu</code>（最新版的archlinux可能移除了相关驱动）：</p>
-<p>如果不支持Wi-Fi，可以用网线连接电脑（博主是用安卓手机USB网络共享连接电脑），然后运<code>dhcpcd</code>
-运行<code>ping https://mirrors.tuna.tsinghua.edu.cn</code>检测网络连接</p>
-<h3 id="使用ssh远程安装"><a class="header" href="#使用ssh远程安装">使用ssh远程安装</a></h3>
+<p>使用其他Linux版本打开终端，对ArchLinux进行分区等操作，</p>
+<p>然后安装<code>arch-install-scripts</code></p>
+<p>大部分Linux发行版的软件仓库中都有arch安装脚本，安装后可以直接使用<code>pacstrap</code>和<code>arch-chroot</code>命令安装。</p>
+<p>同时也可以使用ArchLinux Bootstrap进行安装，可以参考<a href="https://wiki.archlinux.org/title/Install_Arch_Linux_from_existing_Linux_(%E7%AE%80%E4%BD%93%E4%B8%AD%E6%96%87)#%E5%9C%A8%E5%AE%BF%E4%B8%BB%E7%B3%BB%E7%BB%9F%E4%B8%8A%E8%BF%90%E8%A1%8C_pacman">ArchWiki</a></p>
+<h1 id="进入archiso以安装arch-linux"><a class="header" href="#进入archiso以安装arch-linux">进入archiso以安装arch linux</a></h1>
+<h2 id="连接网络"><a class="header" href="#连接网络">连接网络</a></h2>
+<h3 id="有线连接"><a class="header" href="#有线连接">有线连接</a></h3>
+<p>直接用网线连接电脑（没有网线接口且没有安装Wi-Fi驱动的笔记本可以尝试用安卓手机USB网络共享连接电脑），然后运行<code>dhcpcd</code></p>
+<h4 id="检查网络是否连接成功"><a class="header" href="#检查网络是否连接成功">检查网络是否连接成功</a></h4>
+<p>当你配置好连接以后，你可以运行以下命令来检测网络是否连接成功</p>
+<pre><code class="language-bash">ping -c 3 https://mirrors.tuna.tsinghua.edu.cn
+</code></pre>
+<p>你需要运行<code>systemctl status dhcpcd</code>，确保你已经连接网线或已经配置好安卓设备的USB网络共享</p>
+<h3 id="无线连接"><a class="header" href="#无线连接">无线连接</a></h3>
+<p>如果你的电脑支持Wi-Fi，且处于无线局域网的覆盖范围内，这样的话你可以尝试使用无线连接进行安装</p>
+<p>安装时要运行<code>iwctl</code>，进入iwd控制台</p>
+<p>然后输入<code>device list</code>列出网络设备的名称</p>
+<p>如果你的网络设备的名称是<code>wlan0</code>，你可以运行<code>station wlan0 scan</code>来扫描附近的Wi-Fi热点</p>
+<p>扫描完成后，运行<code>station wlan0 get-networks</code></p>
+<p>如果你要连接的Wi-Fi 的SSID是<code>mywlan</code>，你需要运行<code>station wlan0 connect mywlan</code>，然后你需要输入密码以连接网络</p>
+<p>如果你知道网络设备的名称、Wi-Fi的SSID和Wi-Fi密码，你可以在不运行<code>iwctl</code>的模式下直接运行以下命令来连接Wi-Fi（此处我们假设Wi-Fi SSID是<code>mywifi</code>，密码是<code>mypassword</code>，网络设备名是<code>wlan0</code>）</p>
+<pre><code class="language-bash">iwctl --passphrase mypassword station wlan0 connect mywifi 
+</code></pre>
+<h4 id="检测网络是否连接成功"><a class="header" href="#检测网络是否连接成功">检测网络是否连接成功</a></h4>
+<p>当你配置好连接以后，你可以运行以下命令来检测网络是否连接成功</p>
+<pre><code class="language-bash">ping -c 3 https://mirrors.tuna.tsinghua.edu.cn
+</code></pre>
+<p>如果你使用的是无线网络</p>
+<h2 id="使用ssh远程安装"><a class="header" href="#使用ssh远程安装">使用ssh远程安装</a></h2>
 <p>运行<code>pacman -Syy openssh</code>安装openssh
 运行<code>systemctl start sshd</code>启动ssh服务
 运行<code>ifconfig</code>查看ip地址
@@ -179,10 +198,10 @@ ssh root@192.168.*.*
 运行ssh时输入archlinux的密码
 然后可以按照archlinux的安装步骤继续安装</p>
 </blockquote>
-<h3 id="设置时区"><a class="header" href="#设置时区">设置时区</a></h3>
+<h2 id="设置时区"><a class="header" href="#设置时区">设置时区</a></h2>
 <pre><code class="language-bash">timedatectl set-ntp true
 </code></pre>
-<h3 id="磁盘分区"><a class="header" href="#磁盘分区">磁盘分区</a></h3>
+<h2 id="磁盘分区"><a class="header" href="#磁盘分区">磁盘分区</a></h2>
 <p>运行<code>lsblk</code>查看你的硬盘
 机械硬盘一般是/dev/hdx
 SATA固态硬盘一般是/dev/sdx
@@ -200,7 +219,8 @@ fdisk常用命令</p>
 <tr><td>w</td><td>保存数据</td></tr>
 <tr><td>q</td><td>退出但不保存</td></tr>
 </tbody></table>
-<h4 id="主板支持uefi引导"><a class="header" href="#主板支持uefi引导">主板支持UEFI引导</a></h4>
+<p>也可以使用cfdisk来配置，但是需要修改磁盘标识</p>
+<h3 id="分区格式"><a class="header" href="#分区格式">分区格式</a></h3>
 <table><thead><tr><th>分区</th><th>挂载点</th><th>建议大小</th><th>格式</th></tr></thead><tbody>
 <tr><td>efi</td><td>/boot/efi</td><td>300M</td><td>vfat</td></tr>
 <tr><td>boot</td><td>/boot</td><td>500M</td><td>ext4</td></tr>
@@ -208,13 +228,7 @@ fdisk常用命令</p>
 <tr><td>家目录</td><td>/home</td><td>剩余空间</td><td>xfs</td></tr>
 <tr><td>交换分区</td><td>-</td><td>10G</td><td>[swap]</td></tr>
 </tbody></table>
-<h4 id="主板不支持uefi引导"><a class="header" href="#主板不支持uefi引导">主板不支持UEFI引导</a></h4>
-<table><thead><tr><th>分区</th><th>挂载点</th><th>建议大小</th><th>格式</th></tr></thead><tbody>
-<tr><td>根分区</td><td>/</td><td>20G</td><td>ext4</td></tr>
-<tr><td>家目录</td><td>/home</td><td>剩余空间</td><td>xfs</td></tr>
-<tr><td>交换分区</td><td>-</td><td>10G</td><td>[swap]</td></tr>
-</tbody></table>
-<h4 id="格式化分区"><a class="header" href="#格式化分区">格式化分区</a></h4>
+<h3 id="格式化分区"><a class="header" href="#格式化分区">格式化分区</a></h3>
 <p><code>mkfs.vfat /dev/mydisk1</code>格式化efi分区
 <code>mkfs.ext4 /dev/mydisk2</code>格式化boot分区
 <code>mkfs.ext4 /dev/mydisk3</code>格式化根分区
@@ -229,7 +243,7 @@ fdisk常用命令</p>
 <li>xfs不支持缩小分区，谨慎使用</li>
 </ul>
 </blockquote>
-<h4 id="挂载分区"><a class="header" href="#挂载分区">挂载分区</a></h4>
+<h3 id="挂载分区"><a class="header" href="#挂载分区">挂载分区</a></h3>
 <pre><code class="language-bash"># 挂载根分区
 mount /dev/mydisk3 /mnt
 # 在根分区下新建boot文件夹
@@ -249,15 +263,42 @@ mount /dev/mydisk4 /mnt/home
 <p><strong>注意</strong></p>
 <ul>
 <li>交换分区分区已提前激活，分区时无需挂载交换分区</li>
-<li>如果主板不支持UEFI引导，请忽略boot和efi分区</li>
 </ul>
 </blockquote>
-<h3 id="更换软件源"><a class="header" href="#更换软件源">更换软件源</a></h3>
+<h3 id="btrfs引导"><a class="header" href="#btrfs引导">btrfs引导</a></h3>
+<p>同样是用fdisk或cfdisk来进行磁盘分区，然后进行挂载</p>
+<table><thead><tr><th>分区</th><th>挂载点</th><th>建议大小</th><th>格式</th></tr></thead><tbody>
+<tr><td>efi</td><td>/boot/efi</td><td>300M</td><td>vfat</td></tr>
+<tr><td>根分区</td><td>/</td><td>剩余空间</td><td>btrfs</td></tr>
+<tr><td>交换分区</td><td>-</td><td>10G</td><td>[swap]</td></tr>
+</tbody></table>
+<h3 id="挂载btrfs分区"><a class="header" href="#挂载btrfs分区">挂载btrfs分区</a></h3>
+<pre><code class="language-bash"># 挂载btrfs分区
+mount /dev/mydisk2 /mnt
+# 新建子卷
+cd /mnt
+# 新建root子卷
+btrfs subvol create @
+# 新建home子卷
+btrfs subvol create @home
+# 卸载btrfs分区
+cd /
+umount /dev/mydisk2
+# 挂载root子卷
+mount /dev/mydisk2 /mnt -o subvol=@
+# 挂载home子卷
+mkdir -p /mnt/home
+mount /dev/mydisk2 /mnt/home -o subvol=@home
+# 挂载EFI分区
+mkdir -p /mnt/boot/efi
+mount /dev/mydisk1 /mnt/boot/efi
+</code></pre>
+<h2 id="更换软件源"><a class="header" href="#更换软件源">更换软件源</a></h2>
 <p>直接切换为中国的软件包 </p>
 <pre><code class="language-bash">curl -L -o /etc/pacman.d/mirrorlist &quot;https://archlinux.org/mirrorlist/?country=CN&quot;
 </code></pre>
 <p>然后编辑<code>/etc/pacman.d/mirrorlist</code>，反注释其中一个或多个链接。</p>
-<h3 id="安装基本系统"><a class="header" href="#安装基本系统">安装基本系统</a></h3>
+<h2 id="安装基本系统"><a class="header" href="#安装基本系统">安装基本系统</a></h2>
 <pre><code class="language-bash">pacstrap -i /mnt base base-devel linux linux-firmware vim nano
 </code></pre>
 <blockquote>
@@ -267,7 +308,7 @@ mount /dev/mydisk4 /mnt/home
 <li>安装vim和nano是因为需要修改配置文件，然而arch linux不带vim和nano， 需要手动安装。</li>
 </ul>
 </blockquote>
-<h3 id="配置fstab"><a class="header" href="#配置fstab">配置fstab</a></h3>
+<h2 id="配置fstab"><a class="header" href="#配置fstab">配置fstab</a></h2>
 <p>自动配置fstab<code>genfstab -U /mnt &gt;&gt; /mnt/etc/fstab</code>
 检查fstab<code>cat /mnt/etc/fstab</code></p>
 <blockquote>
@@ -276,11 +317,11 @@ mount /dev/mydisk4 /mnt/home
 <li>无论主板是否支持UEFI都可以用这个方法安装</li>
 </ul>
 </blockquote>
-<h3 id="切换至新系统"><a class="header" href="#切换至新系统">切换至新系统</a></h3>
+<h2 id="切换至新系统"><a class="header" href="#切换至新系统">切换至新系统</a></h2>
 <pre><code class="language-bash">arch-chroot /mnt /bin/bash
 </code></pre>
-<h2 id="系统基本配置"><a class="header" href="#系统基本配置">系统基本配置</a></h2>
-<h3 id="语言设置"><a class="header" href="#语言设置">语言设置</a></h3>
+<h1 id="系统基本配置"><a class="header" href="#系统基本配置">系统基本配置</a></h1>
+<h2 id="语言设置"><a class="header" href="#语言设置">语言设置</a></h2>
 <p>配置本地语言<code>vim /etc/locale.gen</code>
 在结尾追加或反注释</p>
 <pre><code>en_US.UTF-8 UTF-8
@@ -294,20 +335,23 @@ zh_CN.UTF-8 UTF-8
 <li>不设置中文的原因是因为tty环境下可能会出现中文乱码，安装桌面时会安装中文字体并修改相关内容</li>
 </ul>
 </blockquote>
-<h3 id="时区设置"><a class="header" href="#时区设置">时区设置</a></h3>
+<h2 id="时区设置"><a class="header" href="#时区设置">时区设置</a></h2>
 <p>本地时区配置<code>ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime</code>
 设置硬件时钟<code>hwclock --systohc --utc</code></p>
-<h3 id="配置主机名"><a class="header" href="#配置主机名">配置主机名</a></h3>
-<p>编辑<code>/etc/hostname</code>，写入<code>myhostname</code>
-&gt;其中myhostname代表你的主机名，如果不配置，默认为archlinux</p>
-<h3 id="配置hosts"><a class="header" href="#配置hosts">配置hosts</a></h3>
+<h2 id="配置主机名"><a class="header" href="#配置主机名">配置主机名</a></h2>
+<p>编辑<code>/etc/hostname</code>，写入<code>myhostname</code></p>
+<blockquote>
+<p>其中myhostname代表你的主机名，如果不配置，默认为archlinux
+建议配置主机名，不然当你进入KDE Plasma桌面时，可能会出现无法打开GUI应用程序的问题</p>
+</blockquote>
+<h2 id="配置hosts"><a class="header" href="#配置hosts">配置hosts</a></h2>
 <p>编辑<code>/etc/hosts</code>，把<code>myhostname</code>改为你自己的主机名</p>
 <pre><code class="language-bash">127.0.0.1	localhost
 ::1			localhost
 127.0.1.1	myhostname.localdomain	myhostname
 </code></pre>
-<h3 id="引导系统"><a class="header" href="#引导系统">引导系统</a></h3>
-<h4 id="efistub-直接引导archlinux适用于单系统"><a class="header" href="#efistub-直接引导archlinux适用于单系统">EFIStub 直接引导ArchLinux（适用于单系统）</a></h4>
+<h1 id="引导系统"><a class="header" href="#引导系统">引导系统</a></h1>
+<h2 id="efistub-直接引导archlinux适用于单系统"><a class="header" href="#efistub-直接引导archlinux适用于单系统">EFIStub 直接引导ArchLinux（适用于单系统）</a></h2>
 <pre><code class="language-bash">efibootmgr -d /dev/sda -p 1 -c -L &quot;Arch Linux&quot; -l /vmlinuz-linux -u &quot;root=/dev/sda2 rw initrd=/initramfs-linux.img&quot;
 </code></pre>
 <p><strong>提示</strong></p>
@@ -316,60 +360,71 @@ zh_CN.UTF-8 UTF-8
 <li><code>-p 1</code>中的<code>1</code>代表EFI分区的位置</li>
 <li><code>/dev/sda2</code>代表root分区位置</li>
 </ul>
-<h4 id="grub引导windows或其他linux"><a class="header" href="#grub引导windows或其他linux">Grub引导Windows或其他Linux</a></h4>
+<h2 id="grub引导"><a class="header" href="#grub引导">Grub引导</a></h2>
 <p>运行<code>pacman -S os-prober</code>，如果使用archlinux单系统或者是不想用arch linux引导其他系统则可以省略此步骤</p>
-<h4 id="主板支持uefi引导-1"><a class="header" href="#主板支持uefi引导-1">主板支持UEFI引导</a></h4>
-<p>下载grub安装时所必需的文件<code>pacman -S dosfstools grub efibootmgr</code>
-安装grub<code>grub-install --target=x86_64-efi --efi-directory=/boot/efi --recheck</code>
-如果提示no error reported则说明grub安装成功
-运行<code>grub-mkconfig -o /boot/grub/grub.cfg</code>更新grub</p>
-<h4 id="主板不支持uefi引导-1"><a class="header" href="#主板不支持uefi引导-1">主板不支持UEFI引导</a></h4>
-<p>下载grub安装时所必需的文件<code>pacman -S grub</code>
-安装grub<code>grub-install /dev/sda --recheck</code>
-如果提示no error reported则说明grub安装成功
-运行<code>grub-mkconfig -o /boot/grub/grub.cfg </code>更新grub</p>
-<h3 id="用户设置"><a class="header" href="#用户设置">用户设置</a></h3>
-<p>设置主机名<code>vim /etc/hostname</code>
-输入主机名，只能输入字母（如果跳过此配置，主机名默认为archlinux）
-设置root密码<code>passwd</code>
-添加用户<code>useradd -m -g users -G wheel -s /bin/bash username</code>
-设置用户密码（可以和root相同）<code>passwd username</code>
-为用户添加sudo权限<code>vim /etc/sudoers</code>
-反注释<code>%wheel ALL=(ALL) ALL</code>
-如果想在输入密码时显示星号，可以追加<code>Defaults env_reset,pwfeedback</code></p>
+<p>下载grub安装时所必需的文件<code>pacman -S dosfstools grub efibootmgr</code></p>
+<p>安装grub<code>grub-install --target=x86_64-efi --efi-directory=/boot/efi --recheck</code></p>
+<p>如果提示no error reported则说明grub安装成功</p>
+<p>运行<code>grub-mkconfig -o /boot/grub/grub.cfg</code>更新grub</p>
+<h2 id="systemd-boot引导"><a class="header" href="#systemd-boot引导">systemd-boot引导</a></h2>
+<ul>
+<li>运行<code>bootctl install</code></li>
+</ul>
 <blockquote>
 <p><strong>注意</strong></p>
 <ul>
-<li>usename为用户名</li>
-<li>如果没有设置星号，输入密码时不显示密码是正常现象</li>
-<li>编辑/etc/sudoers时要用:wq!命令执行，加一个感叹号强制执行</li>
+<li>请提前设置ESP分区路径，否则可能会安装失败！</li>
 </ul>
 </blockquote>
-<h3 id="安装网络驱动"><a class="header" href="#安装网络驱动">安装网络驱动</a></h3>
-<h4 id="wifi"><a class="header" href="#wifi">wifi</a></h4>
-<p>安装wifi驱动<code>pacman -S netctl iw wpa_supplicant dialog</code>
-博通网卡请安装这个驱动<code>pacman -S broadcom-wl</code></p>
-<h4 id="有线连接dhcpnetworkmanager"><a class="header" href="#有线连接dhcpnetworkmanager">有线连接dhcp、NetworkManager</a></h4>
-<p>安装有线网卡驱动<code>pacman -S dhcp dhcpcd netwkrkmanager</code>
-chroot环境下无法systemctl启动有线网卡</p>
-<h3 id="退出chroot并进入新系统"><a class="header" href="#退出chroot并进入新系统">退出chroot并进入新系统</a></h3>
+<ul>
+<li>适用systemd-boot启动archlinux</li>
+</ul>
+<p>在<code>/boot/loader/entries</code>目录下添加<code>arch.conf</code>，然后将文件内容改为：</p>
+<pre><code class="language-bash">title           ArchLinux
+linux           /vmlinuz-linux
+initrd          /initramfs-linux.img
+options         root=/dev/nvme0n1p2     rw quiet	rootflags=subvol=@
+</code></pre>
+<h1 id="用户设置"><a class="header" href="#用户设置">用户设置</a></h1>
+<p>设置主机名<code>vim /etc/hostname</code></p>
+<p>输入主机名，只能输入字母（如果跳过此配置，主机名默认为archlinux）</p>
+<p>设置root密码<code>passwd</code></p>
+<p>添加用户<code>useradd -m -g users -G wheel -s /bin/bash username</code></p>
+<p>设置用户密码（可以和root相同）<code>passwd username</code></p>
+<p>为用户添加sudo权限<code>vim /etc/sudoers</code></p>
+<p>反注释<code>%wheel ALL=(ALL) ALL</code></p>
+<p>如果想在输入密码时显示星号，可以追加<code>Defaults env_reset,pwfeedback</code></p>
+<blockquote>
+<p><strong>注意</strong></p>
+<ul>
+<li>
+<p>usename为用户名</p>
+</li>
+<li>
+<p>如果没有设置星号，输入密码时不显示密码是正常现象</p>
+</li>
+<li>
+<p>编辑/etc/sudoers时要用:wq!命令执行，加一个感叹号强制执行</p>
+</li>
+</ul>
+</blockquote>
+<h1 id="安装网络驱动"><a class="header" href="#安装网络驱动">安装网络驱动</a></h1>
+<h2 id="wifi"><a class="header" href="#wifi">wifi</a></h2>
+<p>安装wifi驱动<code>pacman -S netctl iw wpa_supplicant dialog iwd</code></p>
+<p>博通网卡请安装这个驱动（常用于MacBook用户或黑苹果用户）<code>pacman -S broadcom-wl</code></p>
+<h2 id="有线连接dhcpnetworkmanager"><a class="header" href="#有线连接dhcpnetworkmanager">有线连接dhcp、NetworkManager</a></h2>
+<p>安装有线网卡驱动<code>pacman -S dhcp dhcpcd netwkrkmanager</code></p>
+<p>chroot环境下无法systemctl启动有线网卡</p>
+<h1 id="退出chroot并重启以进入新系统"><a class="header" href="#退出chroot并重启以进入新系统">退出chroot并重启以进入新系统</a></h1>
 <pre><code class="language-bash"># 退出chroot
 exit
-# 卸载efi分区
-umount /dev/mydisk1
-# 卸载boot分区
-umount /dev/mydisk2
-# 卸载home分区
-umount /dev/mydisk4
-# 卸载根分区
-umount /dev/mydisk3
 # 重启电脑
 reboot
 </code></pre>
 <blockquote>
 <p><strong>注意</strong></p>
 <ul>
-<li>运行reboot命令后，请拔掉U盘</li>
+<li>运行reboot命令后，请移除安装介质</li>
 </ul>
 </blockquote>
 
