--- a/ArchLinux_Terminal_configuration.html
+++ b/ArchLinux_Terminal_configuration.html
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="ReadmeFirst.html"><strong aria-hidden="true">1.</strong> ArchLinux安装前必读</a></li><li class="chapter-item expanded "><a href="ArchLinux_Installation.html"><strong aria-hidden="true">2.</strong> ArchLinux安装</a></li><li class="chapter-item expanded "><a href="ArchLinux_Configuration.html"><strong aria-hidden="true">3.</strong> ArchLinux配置</a></li><li class="chapter-item expanded "><a href="ArchLinux_Beautify.html"><strong aria-hidden="true">4.</strong> ArchLinux桌面美化</a></li><li class="chapter-item expanded "><a href="ArchLinux_Terminal_configuration.html" class="active"><strong aria-hidden="true">5.</strong> ArchLinux终端配置</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="ReadmeFirst.html"><strong aria-hidden="true">1.</strong> ArchLinux安装前必读</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="ArchLinux_Installation.html"><strong aria-hidden="true">1.1.</strong> ArchLinux安装</a></li><li class="chapter-item expanded "><a href="ArchLinux_Configuration.html"><strong aria-hidden="true">1.2.</strong> ArchLinux配置</a></li><li class="chapter-item expanded "><a href="ArchLinux_Beautify.html"><strong aria-hidden="true">1.3.</strong> ArchLinux桌面美化</a></li><li class="chapter-item expanded "><a href="ArchLinux_Terminal_configuration.html" class="active"><strong aria-hidden="true">1.4.</strong> ArchLinux终端配置</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -135,9 +135,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="安装zsh"><a class="header" href="#安装zsh">安装zsh</a></h1>
-<p>安装软件包<code>zsh</code>
-运行<code>chsh -s /bin/zsh</code>配置zsh
-如果想换回bash，运行<code>chsh -s /bin/bash</code></p>
+<p>安装软件包<code>zsh</code></p>
+<p>运行<code>chsh -s /bin/zsh</code>配置zsh</p>
+<p>如果想换回bash，运行<code>chsh -s /bin/bash</code></p>
 <h1 id="安装oh-my-zsh"><a class="header" href="#安装oh-my-zsh">安装oh-my-zsh</a></h1>
 <p>执行以下命令前请确保你已安装<code>git</code></p>
 <p>GitHub在国内部分地区访问速度较慢，有时需要使用科学上网才能访问</p>
@@ -173,8 +173,8 @@ export all_proxy=http://127.0.0.1:7890
 <pre><code class="language-bash">git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k
 </code></pre>
 <p>配置powerlevel10k</p>
-<p>在~/.zshrc写入<code>ZSH_THEME=&quot;powerlevel10k/powerlevel10k&quot; </code>
-安装后重新打开终端，并更改终端字体为hack（需要安装nerd-fonts，可以在cn源中安装<code>nerd-fonts-complete</code>，这会安装所有的nerd-fonts字体）</p>
+<p>在~/.zshrc写入<code>ZSH_THEME=&quot;powerlevel10k/powerlevel10k&quot; </code></p>
+<p>安装后重新打开终端，并更改终端字体为hack（需要安装nerd-fonts，可以在cn源中安装<code>nerd-fonts-complete</code>，这会安装所有的nerd-fonts字体）</p>
 <p><img src=".picture/terminal.png" alt="ArchLinux终端美化效果" /></p>
 <p>如需重新配置powerlevel10k主题，可随时运行<code>p10k configure</code></p>
 <h1 id="安装自动补全插件"><a class="header" href="#安装自动补全插件">安装自动补全插件</a></h1>
@@ -189,9 +189,9 @@ export all_proxy=http://127.0.0.1:7890
 <pre><code class="language-bash">echo &quot;source $ZSH_CUSTOM/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh&quot; &gt;&gt; ${ZDOTDIR:-$HOME}/.zshrc
 </code></pre>
 <h1 id="安装colorls插件"><a class="header" href="#安装colorls插件">安装colorls插件</a></h1>
-<p>安装Ruby Gem，软件包名为<code>ruby</code>
-运行<code>gem install colorls</code>，用gem安装colorls(确保已安装nerd-fonts字体，不然会乱码)
-如果安装速度慢，可以<a href="https://mirror.tuna.tsinghua.edu.cn/help/rubygems/">点击这里</a>切换为清华源</p>
+<p>安装Ruby Gem，软件包名为<code>ruby</code></p>
+<p>运行<code>gem install colorls</code>，用gem安装colorls(确保已安装nerd-fonts字体，不然会乱码)</p>
+<p>如果安装速度慢，可以<a href="https://mirror.tuna.tsinghua.edu.cn/help/rubygems/">点击这里</a>切换为清华源</p>
 <p>安装成功以后将下面几行内容写入<code>~/.zshrc</code></p>
 <pre><code class="language-bash">alias ls=colorls
 alias ll=&quot;colorls -l&quot;
