--- a/print.html
+++ b/print.html
@@ -627,20 +627,16 @@ Server = https://mirrors.tuna.tsinghua.edu.cn/blackarch/$repo/os/$arch
 <p>可根据实际情况添加其他部件</p>
 </blockquote>
 <h1 id="安装主题"><a class="header" href="#安装主题">安装主题</a></h1>
-<p>直接下载全局主题，依次点击
-&gt;系统设置-&gt;全局主题-&gt;获取新的主题（如果无法下载，可以分别在Plasma样式、颜色、应用程序风格等自己选择主题进行下载，也可以下载SDDM桌面、欢迎界面、图标和鼠标指针）
-&gt;
-&gt;系统设置-&gt;应用程序风格-&gt;窗口装饰-&gt;标题栏按钮（自己调整窗口标题栏，可以把按键放到左边）
-&gt;
-&gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;糖果-&gt;选择三个特效-&gt;应用
-&gt;
-&gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;外观-&gt;魔灯
-&gt;
-&gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;焦点-&gt;滑出
-&gt;
-&gt;系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;窗口管理-&gt;桌面立方(目前桌面立方可能已被移除)
-&gt;
-&gt;系统设置-&gt;窗口管理-&gt;任务切换器-&gt;把微风改为翻转切换</p>
+<p>直接下载全局主题，依次点击</p>
+<blockquote>
+<p>系统设置-&gt;全局主题-&gt;获取新的主题（如果无法下载，可以分别在Plasma样式、颜色、应用程序风格等自己选择主题进行下载，也可以下载SDDM桌面、欢迎界面、图标和鼠标指针）</p>
+<p>系统设置-&gt;应用程序风格-&gt;窗口装饰-&gt;标题栏按钮（自己调整窗口标题栏，可以把按键放到左边）</p>
+<p>系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;糖果-&gt;选择三个特效-&gt;应用</p>
+<p>系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;外观-&gt;魔灯</p>
+<p>系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;焦点-&gt;滑出</p>
+<p>系统设置-&gt;工作空间行为-&gt;桌面特效-&gt;窗口管理-&gt;桌面立方(目前桌面立方可能已被移除)</p>
+<p>系统设置-&gt;窗口管理-&gt;任务切换器-&gt;把微风改为翻转切换</p>
+</blockquote>
 <h1 id="设置kvantum主题"><a class="header" href="#设置kvantum主题">设置Kvantum主题</a></h1>
 <p>首先安装<code>sudo pacman -S kvantum</code>，然后手动添加kvantum主题文件夹以完成安装。</p>
 <h1 id="安装latte-dock"><a class="header" href="#安装latte-dock">安装Latte-Dock</a></h1>
