--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Document</title>
@@ -7,8 +7,6 @@
         <meta name="description" content="Description">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
         <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
-        <link rel="apple-touch-icon" sizes="76x76" href="./531647168571_.pic.png">
-        <link rel="icon" href="./531647168571_.pic.png">
     </head>
     <body>
         <div id="app">玩命加载中...</div>
