fix bugs and add favicon
fix bugs and add favicon

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Document</title>
+        <title>森哥Studio的个人博客</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
         <meta name="description" content="Description">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
         <link rel="stylesheet" href="css/docsify-themeable.css">
+        <link rel="shortcut icon" href="img/favicon.png">
     </head>
     <body>
         <div id="app">玩命加载中...</div>
@@ -66,17 +67,23 @@
         <script src="js/docsify-gitalk.js"></script>
         <script src="js/gitalk.js"></script>
         <script>
-        const gitalk = new Gitalk({
-            clientID: '2145ea87c946bdb131b9',
-            clientSecret: '380263d716d0cdd8d8dc5c4175ef5eb20625596c',
-            label: 'gitalk',
-            repo: 'senge-studio.github.io',
-            owner: 'senge-studio',
-            admin: ['senge-studio'],
-            language: 'zh_CN',
-            // facebook-like distraction free mode
-            distractionFreeMode: true
-        })
+            const gitalk = new Gitalk({
+                clientID: '2145ea87c946bdb131b9',
+                clientSecret: '380263d716d0cdd8d8dc5c4175ef5eb20625596c',
+                // labels: ['gitalk'],
+                labels: 'gitalk',
+                repo: 'senge-studio.github.io',
+                owner: 'senge-studio',
+                admin: ['senge-studio'],
+                language: 'zh-CN',
+                // facebook-like distraction free mode
+                distractionFreeMode: true
+            })
+            window.addEventListener('hashchange', onHashChange);
+            function onHashChange() {
+                props.id = decodeURI(location.hash.split('?')[0]);
+            }
+            gitalk.render('gitalk-container')
         </script>
     </body>
 </html>
