--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 clientSecret: '380263d716d0cdd8d8dc5c4175ef5eb20625596c',
                 // labels: ['gitalk'],
                 labels: 'gitalk',
-                repo: 'blog.senge.dev',
+                repo: 'SengeStudio',
                 owner: 'senge-studio',
                 admin: ['senge-studio'],
                 language: 'zh-CN',
